# px-demo

./: .gitignore  README.ipynb  README.md  demo.sh  notebook.ipynb  pw  pyproject.toml  wraptor.ipynb
.github/workflows/: build.yml
src/px_demo/: moo.py
test/: test_something.py
tests/: test_cowsay.py
wrapped_pi/: plot.py
